Added access transformer for render position fields

--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,7 @@ runClient {
 jar {
     manifest {
         attributes 'FMLCorePlugin': 'com.goodbird.salamanderlib.hooklib.geckohooks.GeckoHookLoader'
+        attributes 'FMLAT': 'salamanderlib_at.cfg'
         attributes 'FMLCorePluginContainsFMLMod': 'true'
     }
 }
