--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,7 @@ runClient {
 
 jar {
     manifest {
-        attributes 'FMLCorePlugin': 'com.goodbird.salamanderlib.hooklib.geckohooks.GeckoHookLoader'
+        attributes 'FMLCorePlugin': 'com.goodbird.salamanderlib.asm.GeckoHookLoader'
         attributes 'FMLAT': 'salamanderlib_at.cfg'
         attributes 'FMLCorePluginContainsFMLMod': 'true'
     }
